test/files/errors/unbound_variable.scm
; Test: Unbound variable - should return exit code 84
(* foo 2)
